<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foregroundTint="#00BCD4"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8C8C8C">

        <TextView
            android:id="@+id/student_id"
            android:layout_width="414dp"
            android:layout_height="364dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/spicy_rice"
            android:text="@string/kumod_hansidu"
            android:textAlignment="center"
            android:textColor="#21005B"
            android:textSize="15sp"
            app:drawableTopCompat="@color/teal_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/st_name"
            android:layout_width="186dp"
            android:layout_height="59dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/spicy_rice"
            android:text="@string/w1867092"
            android:textAlignment="center"
            android:textColor="#21005B"
            android:textSize="15sp"
            app:drawableTopCompat="@color/teal_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.229" />

        <TextView
            android:id="@+id/message"
            android:layout_width="377dp"
            android:layout_height="142dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/spicy_rice"
            android:text="@string/message"
            android:textAlignment="center"
            android:textColor="#21005B"
            android:textSize="15sp"
            app:drawableTopCompat="@color/teal_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.824" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>